--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.palavras.unicap.palavrinhas">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    xmlns:tools="http://schemas.android.com/tools"
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    xmlns:tools="http://schemas.android.com/tools"
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,14 +25,12 @@
         <activity
             android:name=".Activity.JogoActivity"
             android:screenOrientation="landscape" />
-
         <activity
             android:name=".Activity.RecordesActivity"
             android:screenOrientation="landscape" />
-
-        <activity android:name=".Activity.RegistrarActivity"
-            android:screenOrientation="landscape">
-        </activity>
+        <activity
+            android:name=".Activity.RegistrarActivity"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
