--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,11 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
     implementation 'com.jakewharton:butterknife:10.0.0'
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    implementation "android.arch.lifecycle:livedata:1.1.1"
+
+
+
+    
 }
+
