--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
